mengganti font nav bar di css class nav .logo menjadi MonteCarlo

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -22,7 +22,7 @@ nav {
 }
 
 nav .logo {
-    font-family: 'MonteCarlo', cursive;
+    font-family: 'MonteCarlo';
     letter-spacing: 5px;
     font-size: 25px;
 }
